Fix for bug 243203. Crash removing address line in message compose window [@ nsCSSFrameConstructor::AttributeChanged] r=neil, sr=bryner